--- a/config/database.yml
+++ b/config/database.yml
@@ -41,9 +41,9 @@ development:
   <<: *default
   # database: app_development
 
-test:
-  <<: *default
-  database: app_test
+#test:
+#  <<: *default
+#  database: app_test
 
 production:
   <<: *default
